<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/penColor"
          android:orderInCategory="100"
          android:title="@string/action_penColor"
          app:showAsAction="never"/>

    <item android:id="@+id/bgColor"
          android:orderInCategory="100"
          android:title="@string/action_bgColor"
          app:showAsAction="never"/>


    <item android:id="@+id/screenshot"
          android:orderInCategory="100"
          android:title="@string/screenshot"
          app:showAsAction="never"/>

    <item android:id="@+id/undo"
          android:orderInCategory="100"
          android:title="@string/undo"
          app:showAsAction="never"/>

    <item android:id="@+id/clear"
          android:orderInCategory="100"
          android:title="@string/clear"
          app:showAsAction="never"/>


</menu>